# InstaFollow

./: .gitignore  README.md  browser.py  config.py  cookies.py  gui.py  instagram.py  main.py  pyproject.toml  scroll.py  unfollow.py  utils.py
ui/: __init__.py  browser_embed.py  logging_handler.py  main_window.py  styles.py  translations.py  worker.py
