[tool.poetry]
name = "instafollow"
version = "0.1.0"
description = ""
authors = ["Jordi Sánchez <jordisanchezmora98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
playwright = "^1.57.0"
playwright-stealth = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
