[tool.poetry]
name = "instafollow"
version = "0.1.0"
description = ""
authors = ["Jordi Sánchez <jordisanchezmora98@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
playwright = "^1.57.0"
playwright-stealth = "^2.0.1"
pyside6 = "^6.11.0"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pyinstaller (>=6.20.0,<7.0.0)"
]
